
=== Bug fixes (since v2.3.1) ===

  * Building process was failing (since v2.3.1) on Windows with C compiler other than Microsoft Visual C++

=== Other changes (since v2.3.1) ===

  * Updated py2exe example (switched to cxFreeze to show how it's done) following https://groups.google.com/group/guidata_guiqwt/browse_thread/thread/f8db01cf7149e964
  * Updated the build in place batch script: building on Windows with Ms Visual C++

----

== Version 2.3.1 ==

=== Bug fixes (since v2.3.0) ===

  * Fixed build failures occuring on non-Windows platforms (Issue 54)
  * Fixed requirements in README and setup.py: guiqwt v2.3 requires guidata v1.6

----

== Version 2.3.0 ==

=== New features (since v2.2.1) ===

  * Added support for Python 3: a single code source base compatible with both Python 2 and Python 3
  * `scaler` C++ extension: added alternative implementations of C99 features so that this extension is now compatible with Microsoft Visual C++ compiler (was only compatible with gcc)
  * Replaced all Fortran 77/90 extensions by Cython extensions:
    * Building `guiqwt` no longer requires a Fortran compiler (but only a C/C++ compiler for the C++ scaler extension and the C Cython extensions)
    * 2-D histogram items are drawn 3 times faster than before
    * The Mandelbrot example runs faster too

=== Bug fixes (since v2.2.1) ===

  * `guiqwt.image_nanmin/_nanmax`: bug fixed when data is a numpy.ma.MaskedArray object
  * `guiqwt.styles`: using copy.deepcopy instead of copy.copy in `ItemParameters.get` to avoid side effects when using more than one instance of a DataSet object
  * `guiqwt.annotations`: fixed bug when showing an AnnotatedShape object on an empty plot (unit was None)
  * Fixed `PolygonShape` items pickle support (save_items, restore_items)

----

== Version 2.2.1 ==

=== New features (since v2.2.0) ===

  * Added support for plot items serialization/deserialization to/from HDF5: