@@ -10,6 +10,7 @@
 
 === Other changes (since v2.3.1) ===
 
+  * io.exec_image_save_dialog: added `template` argument to support DICOM files
   * Updated py2exe example (switched to cxFreeze to show how it's done) following https://groups.google.com/group/guidata_guiqwt/browse_thread/thread/f8db01cf7149e964
   * Updated the build in place batch script: building on Windows with Ms Visual C++
 
